--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 }
 
 body {
-    background: url(../img/background.jpg) no-repeat;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.95));
     background-position: center;
     background-size: cover;
     padding: 0;
