--- a/css/style.css
+++ b/css/style.css
@@ -6,12 +6,14 @@
 
 * {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 body {
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.95));
-    background-position: center;
-    background-size: cover;
+    background: url(../img/fundo.jpg);
+    background-position: center center;
+    background-size: cover cover;
     padding: 0;
     margin: 0;
     font-weight: 300;
